# riverbed

./: .gitmodules  Cargo.toml  Riverbed.cap
assets/shaders/: chunk.wgsl  voxel_ao.wgsl
crates/riverbed_block_def/: Cargo.toml
crates/ssao/: Cargo.toml
crates/ssao/src/: lib.rs  ssao.wgsl
src/: lib.rs  main.rs
src/agents/: free_fly.rs  mod.rs  movement.rs  player.rs
src/agents/block_action/: mod.rs
src/block/: block.rs
src/controls/: action_mapping.rs  mod.rs
src/interactions/: mod.rs  place.rs
src/keyboard/: ActionMapping.rs  mod.rs
src/physics/: mod.rs
src/render/: ao_texture.rs  camera.rs  chunk.wgsl  chunk_culling.rs  chunk_material.wgsl  draw_chunks.rs  mesh_chunks.rs  mesh_utils.rs  mod.rs  shared_load_area.rs  texture_array.rs  texture_load.rs
src/render/binary_greedy_meshing/: mod.rs
src/render/effects/: mod.rs  normal_ao.rs
src/render/effects/shaders/: normal_ao.wgsl
src/render/hbao/: ao_gen_prepass_node.rs  blur_prepass_node.rs  hbao.rs  linear_depth_prepass_node.rs  mod.rs  postprocessing_node.rs
src/render/hbao/shaders/: ao_gen_compute.wgsl  apply_ao_frag.wgsl  blur_compute.wgsl  linear_depth_compute.wgsl
src/render/sky/: mod.rs  sky.rs
src/scenes/: mod.rs
src/scenes/builder/: builder_chunk.rs  mod.rs  systems.rs
src/setup/: mod.rs
src/sounds/: mod.rs
src/ui/: mod.rs  ui_tex_map.rs
src/utils/: mod.rs
src/utils/math/: closest.rs  mod.rs  points.rs  ranges.rs
src/world/: chunk.rs  load_area.rs  load_orders.rs  mod.rs  voxel_world.rs
src/world/pos/: mod.rs  pos2d.rs  pos3d.rs
src/world/utils/: palette.rs
web/: index.html  riverbed.d.ts  riverbed.js  riverbed_bg.wasm.d.ts
