[package]
name = "riverbed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riverbed"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/*"
]

[dependencies]
bevy = { version = "0.16" ,default-features = true, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "webgpu",
    "bevy_debug_stepping",
    "bevy_asset",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
]  }
bevy_picking = "0.16"
bevy_dev_tools = "0.16"
binary-greedy-meshing = { path = "crates/binary-greedy-meshing", version = "*" }
indexmap = "*"
itertools = "*"
vpsearch = "*"
parking_lot = "*"
csv = "*"
colorsys = "*"
anyhow = "*"
serde = "*"
strum = "*"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy_flycam = "*"
strum_macros = "*"
dashmap = "*"
futures-lite = "*"
array-macro = "*"
packed-uints = "*"
block-mesh = "*"
lazy_static = "*"
regex = "*"
bytemuck ="*"
json5 = "*"
wgpu = "23.0.1"
wasm-bindgen = { version = "0.2.100" }
bevy_egui = {version="0.34", features = ["open_url", "default_fonts", "render"] }
riverbed_closest = { path = "crates/riverbed_closest", version = "*" }

[build-dependencies]
riverbed_block_def = { path = "crates/riverbed_block_def", version = "*" }

[profile.dev]
opt-level = 1

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-timer = { version = "0.2" }
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3" }
console_error_panic_hook = { version = "0.1" }
tracing-wasm = { version = "0.2" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
release = []
web = []
testing = []


#Run commands
# if referencing this in another project you need the .cargo/config.toml to work
#$env:RUST_BACKTRACE="1"; cargo watch -x "run --target wasm32-unknown-unknown"
#$env:RUST_BACKTRACE="1"; cargo watch -x "run"