[package]
name = "riverbed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riverbed"

[dependencies]
bevy = { version = "0.16" ,default-features = true, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "webgpu",
    "bevy_debug_stepping",
    "bevy_asset",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_remote",
]  }
bevy_picking = "0.16"
bevy_dev_tools = "0.16"
bevy-inspector-egui = "0.31"
indexmap = "*"
itertools = "*"
vpsearch = "*"
parking_lot = "*"
csv = "*"
colorsys = "*"
anyhow = "*"
serde = "*"
strum = "*"
avian3d = "0.3"
bevy_flycam = "*"
strum_macros = "*"
dashmap = "*"
futures-lite = "*"
array-macro = "*"
packed-uints = "*"
block-mesh = "*"
lazy_static = "*"
regex = "*"
bytemuck ="*"
json5 = "*"
wgpu = "23.0.1"
num-derive = "0.3"
num-traits = "0.2"
wasm-bindgen = { version = "0.2.100" }
bevy_egui = {version="0.34", features = ["open_url", "default_fonts", "render"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 0


# Add a new profile for debugging release builds
[profile.release-with-debug]
inherits = "release"
debug = true
opt-level = 0

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-timer = { version = "0.2" }
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3" }
console_error_panic_hook = { version = "0.1" }
tracing-wasm = { version = "0.2" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
release = []
web = []
testing = []


#Run commands
# if referencing this in another project you need the .cargo/config.toml to work
#$env:RUST_BACKTRACE="1"; cargo watch -x "run --target wasm32-unknown-unknown"
#$env:RUST_BACKTRACE="1"; cargo watch -x "run"
#$env:RUST_BACKTRACE="1"; cargo watch -x "run --release --features bevy/trace_tracy"